--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.0",
     "@tanstack/react-query": "^4.29.14",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
@@ -17,14 +18,14 @@
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
+    "eslint-config-next": "^13.4.6",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.2",
-    "next": "13.4.4",
+    "next": "^13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-share": "^4.4.1",
     "tailwindcss": "3.3.2",
@@ -34,7 +35,24 @@
     "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/jest": "^29.5.2",
     "prettier": "^2.8.8",
+    "prisma": "^4.16.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thops1925/codesnip.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/thops1925/codesnip/issues"
+  },
+  "homepage": "https://github.com/thops1925/codesnip#readme"
 }
